<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/team_a"
                android:inputType="text"
                android:textColor="@color/buttonTeamA"
                android:textSize="@dimen/team" />

            <TextView
                android:id="@+id/total_score_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/total_score_A"
                android:textColor="@color/black"
                android:textSize="@dimen/total_score" />

            <Button
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="4dp"
                android:background="@color/buttonTeamA"
                android:onClick="plusThreePointsTeamA"
                android:text="@string/points_3_A" />

            <Button
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="4dp"
                android:background="@color/buttonTeamA"
                android:onClick="plusTwoPointsTeamA"
                android:text="@string/points_2_A" />

            <Button
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="24dp"
                android:background="@color/buttonTeamA"
                android:onClick="plusOnePointTeamA"
                android:text="@string/free_throw_A" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/darker_gray">

        </View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/team_b"
                android:inputType="text"
                android:textColor="@color/buttonTeamB"
                android:textSize="@dimen/team" />

            <TextView
                android:id="@+id/total_score_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/total_score_B"
                android:textColor="@color/black"
                android:textSize="@dimen/total_score" />

            <Button
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="4dp"
                android:background="@color/buttonTeamB"
                android:onClick="plusThreePointsTeamB"
                android:text="@string/points_3_B" />

            <Button
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="4dp"
                android:background="@color/buttonTeamB"
                android:onClick="plusTwoPointsTeamB"
                android:text="@string/points_2_B" />

            <Button
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="24dp"
                android:background="@color/buttonTeamB"
                android:onClick="plusOnePointTeamB"
                android:text="@string/free_throw_B" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="resetScore"
        android:background="#FF0000"
        android:text="@string/resetScore" />

</RelativeLayout>